		errors.  Thanks to Raymond Shpeley <rshpeley@ualberta.ca>
	MAJOR BACKWARD-INCOMPATIBLE CHANGE: we have updated all use of floats
		in ECJ fitnesses to doubles.  This involved changing not only
		the fitness classes but certain selection methods and all of
		the application demos so they don't unnecessarily cast into
		floats in the first place.
	Updates to tutorial4
	Bug fix to IntegerVectorIndividual, which properly handles mutation
		probabilities in random sized individuals
	Same for BitVectorIndividual and GeneVectorIndividual
	RegERC's hash function modified to include doubles
	MAJOR BACKWARD-INCOMPATIBLE CHANGE: further updates of floats to
		doubles, this time in most other cases (random distributions,
		etc.) throughout ECJ.
	P_TRUNCATION in ec/gp/ge/breed/GETruncationPipeline now set to
		"truncation" rather than "truncate"
	Added ec/gp/ge/breed/GECrossoverPipeline.java
	Added hooks to ListCrossoverPipeline to simplify and unify
		GECrossoverPipeline
	Heavy revisions to GE package to allow conversions back and forth
		between GE and GP trees
	Added CheckingPipeline.java
	Removed GPNode.nodeInPosition(int, GPNodeGatherer, int).  It is now
		private, and certain more rational cover functions are
		available in its place.
	Added GPNode.iterator(...) methods
	Added new GPNode.numNodes(...) method.
	GPNodeGatherer is now abstract.
	Whenever ParameterDatabase loads a class using Class.forName(...),
		it now instead uses Class.forName(..., , true, 
			Thread.currentThread().getContextClassLoader()).
		This solves an obscure and rare bug where, if you place the
		ecj.jar file in the Extension Classes location on your
		computer (such as /Library/Java/Extension/ on a Mac) rather
		than in the CLASSPATH, the ParameterDatabase cannot load
		classes normally found in the CLASSPATH because it has been
		assigned a different ClassLoader than they have.  Java's
		class loading model is bizarre and arcane.